Better left2right and right2left binarizatin by sharing nodes
Added pialign derivation to hiero grammar/hypergraph conversion filter (TODO: perform GHKM extraction)
Added cicada_extract_sort which merge and re-sort counts
Butfix for faster cube-pruning (Alg. 2) of {tree,string}-to-{tree,string} extractions: we need to start from NULL combination.

2011-8-11
Rework for cicada_lexicon_{model1,hmm}: implement by map/reduce in order to reduce memory requriement
Serious bugfix for alignment computation: TODO handle UNK words...

2011-8-10
Added ngram OOV feature which greatly improve translation quality (and that is found in cdec)
Added cicada-{learn,learn-linear,mert,maxlike}.sh to simplify tuning
Allow output both of lattice and forest (may potentially be extended to output bitext/alignment/spans etc....?)
Serious bugfix for feature-vector comparison, which may affect epsilon-removal of lattice (this affect experiments after "compact-feature-vector")
Faster Cube Pruning for GHKM rule extractions

2011-7-28
Implemented Algorihm 2 of Faster Cube Pruning which completely eliminates parent book-keeping
Added more human-loop-unrolling in hmm code
Added convex-hull computer, which will answer a question, "If this feature scaling were set to ..., your BLEU were ...%."
Bugfix for minimum alignment constraint: when checking with more non-terminals, it was too-constrained
Differentiated max-span for source/target and min-hole for source/target
   I'm not sure whether it is worthwhile to completely simulate Hiero-rules. At least, I can say that there's small difference.

2011-7-12
Better caching for sparse-{lexicon,ngram},rule-shape features
Removed human-unrolling (for potential bug?)

2011-7-11
INCOMPATIBLE CHANGE: use EPSILON instead of NONE at many places... 
  This will affect cicada-extract.py and cicada-alignment.py since they requres NULL word representations
  NONE will be used only for the boundary condition in tree-grammar indexing