@@ -49,13 +49,11 @@ struct greater_file_size
 };
 
 
-path_set_type counts_files;
-path_type     list_file;
+path_set_type input_files;
+path_type output_file = "";
 
 path_type lexicon_source_target_file;
 path_type lexicon_target_source_file;
-
-path_type output_file = "";
 
 bool score_phrase = false;
 bool score_scfg   = false;
@@ -113,8 +111,6 @@ int main(int argc, char** argv)
     
     options(argc, argv);
     
-    if (counts_files.empty() && (list_file.empty() || (! boost::filesystem::exists(list_file) && list_file != "-")))
-      throw std::runtime_error("no count files?");
     if (output_file.empty())
       throw std::runtime_error("no output file?");
     if (lexicon_source_target_file.empty() || ! boost::filesystem::exists(lexicon_source_target_file))
@@ -203,31 +199,34 @@ int main(int argc, char** argv)
     } else {
       const std::string name = (boost::filesystem::exists(prog_name) ? prog_name.string() : std::string(argv[0]));
       utils::mpi_intercomm comm_child(MPI::COMM_WORLD.Spawn(name.c_str(), &(*args.begin()), mpi_size, MPI::INFO_NULL, 0));
+
+      path_set_type counts_files;
       
       // sort input files by its size...
       if (mpi_rank == 0) {
-	if (! list_file.empty()) {
-	  const path_type path = (boost::filesystem::is_directory(list_file) ? list_file / "files" : list_file);
+	for (path_set_type::const_iterator fiter = input_files.begin(); fiter != input_files.end(); ++ fiter) {
+	  if (! boost::filesystem::exists(*fiter))
+	    throw std::runtime_error("no file? " + fiter->string());
 	  
-	  if (! boost::filesystem::exists(path) && path != "-")
-	    throw std::runtime_error("no file? " + path.string());
-	  
-	  const path_type dirname = (path == "-" ? path_type() : path.parent_path());
-	  
-	  utils::compress_istream is(path, 1024 * 1024);
-	  std::string line;
-	  while (std::getline(is, line)) 
-	    if (! line.empty()) {
-	      const path_type path(line);
-	      
-	      if (boost::filesystem::exists(path))
+	  if (boost::filesystem::is_directory(*fiter)) {
+	    const path_type path = *fiter / "files";
+	    
+	    if (! boost::filesystem::exists(path))
+	      throw std::runtime_error("no files? " + path.string());
+	    
+	    utils::compress_istream is(path, 1024 * 1024);
+	    std::string line;
+	    while (std::getline(is, line))
+	      if (! line.empty()) {
+		const path_type path(*fiter / line);
+		
+		if (! boost::filesystem::exists(path))
+		  throw std::runtime_error("no file? " + path.string());
+	    
 		counts_files.push_back(path);
-	      else if (! dirname.empty() && boost::filesystem::exists(dirname / path))
-		counts_files.push_back(dirname / path);
-	    }
-
-	  if (counts_files.empty())
-	    throw std::runtime_error("no count files?");
+	      }
+	  } else
+	    counts_files.push_back(*fiter);
 	}
 	
 	std::sort(counts_files.begin(), counts_files.end(), greater_file_size());
@@ -240,8 +239,6 @@ int main(int argc, char** argv)
 	for (path_set_type::const_iterator citer = counts_files.begin(); citer != citer_end; ++ citer)
 	  os << citer->string() << '\n';
       } else {
-	counts_files.clear();
-	
 	boost::iostreams::filtering_istream is;
 	is.push(boost::iostreams::gzip_decompressor());
 	is.push(utils::mpi_device_bcast_source(0, 4096));
@@ -250,7 +247,7 @@ int main(int argc, char** argv)
 	while (std::getline(is, line))
 	  counts_files.push_back(line);
       }
-
+      
       if (debug && mpi_rank == 0)
 	std::cerr << "count files: " << counts_files.size() << std::endl;
 
@@ -1011,11 +1008,10 @@ void options(int argc, char** argv)
   po::options_description opts_config("configuration options");
   
   opts_config.add_options()
-    ("counts",                 po::value<path_set_type>(&counts_files)->multitoken(), "counts files")
-    ("list",                   po::value<path_type>(&list_file),                      "count file list")
-    ("lexicon-source-target",  po::value<path_type>(&lexicon_source_target_file),     "lexicon model for lex(target | source)")
-    ("lexicon-target-source",  po::value<path_type>(&lexicon_target_source_file),     "lexicon model for lex(source | target)")
-    ("output",                 po::value<path_type>(&output_file),                    "output directory")
+    ("input",                  po::value<path_set_type>(&input_files)->multitoken(), "input files")
+    ("output",                 po::value<path_type>(&output_file),                   "output directory")
+    ("lexicon-source-target",  po::value<path_type>(&lexicon_source_target_file),    "lexicon model for lex(target | source)")
+    ("lexicon-target-source",  po::value<path_type>(&lexicon_target_source_file),    "lexicon model for lex(source | target)")
     
     ("score-phrase", po::bool_switch(&score_phrase), "score phrase pair counts")
     ("score-scfg",   po::bool_switch(&score_scfg),   "score synchronous-CFG counts")
