@@ -10,6 +10,7 @@ Better left2right and right2left binarizatin by sharing nodes
 Added pialign derivation to hiero grammar/hypergraph conversion filter (TODO: perform GHKM extraction)
 Added cicada_extract_sort which merge and re-sort counts
 Butfix for faster cube-pruning (Alg. 2) of {tree,string}-to-{tree,string} extractions: we need to start from NULL combination.
+Modified "input" option for cicada_extract_score{,_mpi} (and no more --counts/--list)
 
 2011-8-11
 Rework for cicada_lexicon_{model1,hmm}: implement by map/reduce in order to reduce memory requriement
